# bevy_ascii_terminal

./: CHANGELOG.md  CREDITS.md  Cargo.toml  LICENSE  README.md
assets/: code_page_437.mapping  hello_rexpaint.xp  ldtk_test.ldtk  tiles.ldtk
benches/: bench.rs
examples/: align_string.rs  align_ui.rs  alignment.rs  auto_camera.rs  bevy_loading.rs  border.rs  camera.rs  colors.rs  custom_mesh_test.rs  fireworks.rs  font_change.rs  grid.rs  grid_position.rs  hello.rs  hello_world.rs  ldtk.rs  movement.rs  multiple_terminals.rs  noise.rs  pivot.rs  rectangular_fonts.rs  render_test.rs  resized.rs  rexpaint.rs  scaling_change.rs  snake.rs  spam.rs  stress_test.rs  strings.rs  test.rs  to_world.rs  transform.rs  ui.rs  viewport.rs
examples/ldtk/: ldtk.rs
src/: ascii.rs  border.rs  border2.rs  border_entity.rs  box_style.rs  camera.rs  color.rs  color_blend.rs  colors.rs  deprecated.rs  entity.rs  formatting.rs  glyph.rs  glyph_mapping.rs  grid_rect.rs  layer.rs  lib.rs  padding.rs  pivot.rs  plugin.rs  point.rs  renderer.rs  string.rs  string_OLD.rs  string_formatting.rs  terminal.rs  tile.rs  to_world.rs  transform.rs
src/formatting/: fmt_box.rs  fmt_string.rs  fmt_tile.rs  formatting---.rs  mod.rs
src/formatting2/: animation.rs  effects.rs  formatters.rs  mod.rs  modifiers.rs
src/grid/: direction.rs  grid_rect.rs  mod.rs  pivot.rs  point.rs  size.rs
src/ldtk/: mod.rs  terminal.rs
src/render/: bundle.rs  camera.rs  entity.rs  font.rs  font_data.rs  glyph_mapping.rs  material.rs  mesh.rs  mod.rs  pipeline.rs  plugin.rs  renderer_sprites.rs  renderer_tile_data.rs  renderer_vertex_data.rs  terminal.frag  terminal.vert  terminal.wgsl  terminal_renderer.rs  uv_mapping.rs
src/renderer/: border.rs  border_mesh.rs  bundle.rs  camera.rs  code_page_437.rs  entity.rs  font.rs  glyph_mapping.rs  layout.rs  material.rs  mesh.rs  mesh_data.rs  mesher.rs  mod.rs  pipeline.rs  pipeline_old.rs  plugin.rs  renderer_tile_data.rs  renderer_vertex_data.rs  terminal.wgsl  terminal_mesh.rs  tile_data.rs  tiles.rs  util.rs  uv_mapping.rs  vertex_data.rs
src/rex/: reader.rs
src/strings/: formatting.rs  grid_string.rs  mod.rs  parse.rs  parse2.rs  tagged_string.rs  terminal_string.rs
src/ui/: mod.rs  ui_box.rs  ui_progress_bar.rs
