[package]
authors = ["sark"]
description = "A simple terminal for rendering ascii in bevy."
edition = "2024"
homepage = "https://github.com/sarkahn/bevy_ascii_terminal"
keywords = ["bevy", "ascii", "terminal", "roguelike", "tilemap"]
license = "MIT"
name = "bevy_ascii_terminal"
readme = "README.md"
repository = "https://github.com/sarkahn/bevy_ascii_terminal"
version = "0.18.3"

[dependencies]
flate2 = "1.0"
byteorder = "1"
bevy_platform = "0.18"
anyhow = "1.0.100"

[dev-dependencies]
fastnoise-lite = "1.1.1"
rand = "0.8.4"
strum = "0.28.0"
strum_macros = "0.28.0"

[dependencies.bevy]
version = "0.18"
default-features = false
features = ["std", "png", "bevy_render", "bevy_asset", "bevy_sprite", "bevy_sprite_render", "bevy_window", "bevy_color"]

[dev-dependencies.bevy]
version = "0.18"
default-features = false
features = ["bevy_winit"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
