[package]
authors = ["sark"]
description = "A simple terminal for rendering ascii in bevy."
edition = "2024"
homepage = "https://github.com/sarkahn/bevy_ascii_terminal"
keywords = ["bevy", "ascii", "terminal", "roguelike", "tilemap"]
license = "MIT"
name = "bevy_ascii_terminal"
readme = "README.md"
repository = "https://github.com/sarkahn/bevy_ascii_terminal"
version = "0.18.4"

[dependencies]
enum-ordinalize = "4.3.0"
thiserror = "2"
flate2 = "1.0"
byteorder = "1"
anyhow = "1.0.100"
nom = "8.0.0"
bevy_platform = "0.18"
strum = "0.28.0"
strum_macros = "0.28.0"

[dev-dependencies]
fastnoise-lite = "1.1.1"
rand = "0.8.4"

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
rev = "ef69ba45b1404c08f31514c210e72fbc19a41314"
# version = "0.18"
default-features = false
features = ["std", "png", "bevy_render", "bevy_asset", "bevy_sprite", "bevy_sprite_render", "bevy_window", "bevy_color"]

[dev-dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
rev = "ef69ba45b1404c08f31514c210e72fbc19a41314"
# version = "0.18"
default-features = false
features = ["bevy_winit"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
