[package]
authors = ["sark"]
description = "A simple terminal for rendering ascii in bevy."
edition = "2024"
homepage = "https://github.com/sarkahn/bevy_ascii_terminal"
keywords = ["bevy", "ascii", "terminal", "roguelike", "tilemap"]
license = "MIT"
name = "bevy_ascii_terminal"
readme = "README.md"
repository = "https://github.com/sarkahn/bevy_ascii_terminal"
version = "0.19.0-dev"

[dependencies]
enum-ordinalize = "4.3.0"
thiserror = "2"
flate2 = "1.0"
byteorder = "1"
anyhow = "1.0.100"
bevy_platform = "0.18"

[dev-dependencies]
fastnoise-lite = "1.1.1"
rand = "0.8.4"

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
rev = "8b8a432ab444eabc775f12939f4cb3b1b047be61"
# version = "0.18"
default-features = false
features = ["std", "png", "bevy_render", "bevy_asset", "bevy_sprite", "bevy_sprite_render", "bevy_window", "bevy_color"]

[dev-dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
rev = "8b8a432ab444eabc775f12939f4cb3b1b047be61"
# version = "0.18"
default-features = false
features = ["bevy_winit", "debug"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
